--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
+
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
@@ -26,5 +27,63 @@
         </div>
       </nav>
     </header>
+
+    <main class="page-main">
+
+      <h1 class="page-main__title">Функциональное питание для котов</h1>
+
+      <section class="product-banner">
+        <h2 class="visually-hidden">Баннер продукта</h2>
+        <b class="product-banner__tagline">Занялся собой? Зайсмись котом!</b>
+        <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
+        <button class="product-banner__button button" type="button">Подобрать программу</button>
+      </section>
+
+      <section class="diet-programs">
+          <h2 class="visually-hidden">Готовые программы питания</h2>
+          <ul class="diet-programs__list">
+            <li class="diet-programs__item">
+              <h3 class="diet-programs__title diet-programs__title--cat-slim">Похудение</h3>
+              <p class="diet-programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="diet-programs__link" href="#">Каталог slim</a>
+            </li>
+            <li class="diet-programs__item">
+              <h3 class="diet-programs__title diet-programs__title--cat-pro">Набор массы</h3>
+              <p class="diet-programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a class="diet-programs__link" href="#">Каталог pro</a>
+            </li>
+          </ul>
+      </section>
+
+      <section class="advantage">
+          <h2 class="advantage__title">Как это работает</h2>
+          <ul class="advantage__list">
+            <li class="advantage__item">
+              <p class="advantage__description advantage__description--leaf">
+                Функциональное питание содержит только полезные питательные вещества.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <p class="advantage__description advantage__description--powder">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <p class="advantage__description advantage__description--dining">
+                Замените один-два приема обычной еды на наше функциональное питание.
+              </p>
+            </li>
+            <li class="advantage__item">
+              <p class="advantage__description advantage__description--clock">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              </p>
+            </li>
+          </ul>
+      </section>
+
+    </main>
+
+
   </body>
 </html>
