--- a/source/index.html
+++ b/source/index.html
@@ -84,6 +84,26 @@
 
     </main>
 
-
+    <footer class="page-footer">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__link" href="#">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
