--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,27 +5,51 @@
     <title>Кэт энерджи: Каталог продукции</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav-wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-      <header class="page-header">
-          <a class="page-header__logo">
-            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
-          </a>
-          <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
-            <div class="main-nav-wrapper">
-              <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
-                  <a>Главная</a>
-                </li>
-                <li class="site-list__item">
-                  <a href="catalog.html">Каталог продукции</a>
-                </li>
-                <li class="site-list__item">
-                  <a href="form.html">Подбор программы</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </header>
+
+    <footer class="page-footer">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__link" href="#">HTML Academy</a>
+      </div>
+    </footer>
+
+
   </body>
 </html>
