--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
       </a>
       <nav class="main-nav">
@@ -27,9 +27,151 @@
       </nav>
     </header>
 
+    <main class="page-main">
+      <h1 class="visually-hidden">Каталог наших товаров
+      </h1>
+      <section class="catalog">
+        <h2 class="catalog__title">Каталог продукции</h2>
+        <ul class="catalog__list">
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" alt="Кэт энерджи с курицей 500г">
+            <table class="product__decriprion composition">
+              <th class="composition__title">Cat energy pro 500 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">500 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Курица</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">700 Р.</td>
+              </tr√>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy pro 1000 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">1000 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Курица</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">1000 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy pro 500 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">500 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td>Рыба</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">700 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy pro 1000 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">1000 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Рыба</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">1000 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy slim 500 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">500 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Гречька</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">400 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy slim 1000 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">1000 г</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Гречька</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">700 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog__item product">
+            <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г">
+            <table class="product__decriprion">
+              <th class="product__title">Cat energy slim 500 г</th>
+              <tr class="composition__item">
+                <td class="composition__index">Обьем</td>
+                <td class="composition__value">500 г.</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Вкус</td>
+                <td class="composition__value">Рис</td>
+              </tr>
+              <tr class="composition__item">
+                <td class="composition__index">Цена</td>
+                <td class="composition__value">500 Р.</td>
+              </tr>
+            </table>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer class="page-footer">
-      <a class="page-footer__logo">
+      <a class="page-footer__logo" href="index.html">
         <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
       </a>
       <div class="page-footer__social social">
