--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="#">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
       </a>
       <nav class="main-nav">
@@ -85,7 +85,7 @@
     </main>
 
     <footer class="page-footer">
-      <a class="page-footer__logo">
+      <a class="page-footer__logo" href="#">
         <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
       </a>
       <div class="page-footer__social social">
