--- a/source/form.html
+++ b/source/form.html
@@ -5,9 +5,10 @@
     <title>Кэт энерджи: подбор программы</title>
   </head>
   <body>
+
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg"width="191" height="38" alt="Кэт энерджи">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -29,18 +30,18 @@
 
     <footer class="page-footer">
       <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
+        <img class="page-footer__logo-image" src="img/    logo-footer.svg"width="128" height="24" alt="Кэт энерджи">
       </a>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
+            <a href="#" class="social__link       social__link--vkontakte">МыВконтакте</a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
+            <a href="#"       class="social__linksocial__link--instagram">МывИнстаграме</a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
+            <a href="#" class="social__link       social__link--facebook">МывФейсбуке<a>
           </li>
         </ul>
       </div>
