--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
         <h2 class="visually-hidden">Баннер продукта</h2>
         <b class="product-banner__tagline">Занялся собой? Зайсмись котом!</b>
         <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
-        <button class="product-banner__button button" type="button">Подобрать программу</button>
+        <a class="product-banner__button button" href="form.html">Подобрать программу</a>
       </section>
 
       <section class="diet-programs">
