Убраны лишние обертки

--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,6 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav-wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a>Главная</a>
@@ -24,7 +23,6 @@
               <a href="form.html">Подбор программы</a>
             </li>
           </ul>
-        </div>
       </nav>
     </header>
 
@@ -59,25 +57,17 @@
       <section class="advantage">
           <h2 class="advantage__title">Как это работает</h2>
           <ul class="advantage__list">
-            <li class="advantage__item">
-              <p class="advantage__description advantage__description--leaf">
+            <li class="advantage__item advantage__item--leaf ">
                 Функциональное питание содержит только полезные питательные вещества.
-              </p>
             </li>
-            <li class="advantage__item">
-              <p class="advantage__description advantage__description--powder">
+            <li class="advantage__item advantage__item--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-              </p>
             </li>
-            <li class="advantage__item">
-              <p class="advantage__description advantage__description--dining">
+            <li class="advantage__item advantage__item--dining">
                 Замените один-два приема обычной еды на наше функциональное питание.
-              </p>
             </li>
-            <li class="advantage__item">
-              <p class="advantage__description advantage__description--clock">
+            <li class="advantage__item advantage__item--clock">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-              </p>
             </li>
           </ul>
       </section>
@@ -88,19 +78,17 @@
       <a class="page-footer__logo" href="#">
         <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
       </a>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
+        <ul class="page-footer__social social-list">
+          <li class="social-list__item">
             <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
           </li>
-          <li class="social__item">
+          <li class="social-list__item">
             <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
           </li>
-          <li class="social__item">
+          <li class="social-list__item">
             <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
           </li>
         </ul>
-      </div>
       <div class="page-footer__copyright copyright">
         <a class="copyright__link" href="#">HTML Academy</a>
       </div>
