Убрана приписка diet- для простоты

--- a/source/index.html
+++ b/source/index.html
@@ -37,19 +37,19 @@
         <a class="product-banner__button button" href="form.html">Подобрать программу</a>
       </section>
 
-      <section class="diet-programs">
+      <section class="programs">
           <h2 class="visually-hidden">Готовые программы питания</h2>
-          <ul class="diet-programs__list">
-            <li class="diet-programs__item">
-              <h3 class="diet-programs__title diet-programs__title--cat-slim">Похудение</h3>
-              <p class="diet-programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="diet-programs__link" href="#">Каталог slim</a>
+          <ul class="programs__list">
+            <li class="programs__item">
+              <h3 class="programs__title programs__title--cat-slim">Похудение</h3>
+              <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="programs__link" href="#">Каталог slim</a>
             </li>
-            <li class="diet-programs__item">
-              <h3 class="diet-programs__title diet-programs__title--cat-pro">Набор массы</h3>
-              <p class="diet-programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            <li class="programs__item">
+              <h3 class="programs__title programs__title--cat-pro">Набор массы</h3>
+              <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="diet-programs__link" href="#">Каталог pro</a>
+              <a class="programs__link" href="#">Каталог pro</a>
             </li>
           </ul>
       </section>
