--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,133 +35,133 @@
         <ul class="catalog__list">
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" alt="Кэт энерджи с курицей 500г">
-            <table class="product__decriprion composition">
-              <th class="composition__title">Cat energy pro 500 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">500 г</td>
+            <table class="product__composition">
+              <th class="product__title">Cat energy pro 500 г</th>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">500 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Курица</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Курица</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">700 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">700 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy pro 1000 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">1000 г</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">1000 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Курица</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Курица</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">1000 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">1000 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy pro 500 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">500 г</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">500 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td>Рыба</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Рыба</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">700 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">700 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy pro 1000 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">1000 г</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">1000 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Рыба</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Рыба</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">1000 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">1000 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy slim 500 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">500 г</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">500 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Гречька</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Гречька</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">400 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">400 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy slim 1000 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">1000 г</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">1000 г</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Гречька</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Гречька</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">700 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">700 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
             <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г">
-            <table class="product__decriprion">
+            <table class="product__composition">
               <th class="product__title">Cat energy slim 500 г</th>
-              <tr class="composition__item">
-                <td class="composition__index">Обьем</td>
-                <td class="composition__value">500 г.</td>
+              <tr class="product__item">
+                <td class="product__index">Обьем</td>
+                <td class="product__value">500 г.</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Вкус</td>
-                <td class="composition__value">Рис</td>
+              <tr class="product__item">
+                <td class="product__index">Вкус</td>
+                <td class="product__value">Рис</td>
               </tr>
-              <tr class="composition__item">
-                <td class="composition__index">Цена</td>
-                <td class="composition__value">500 Р.</td>
+              <tr class="product__item">
+                <td class="product__index">Цена</td>
+                <td class="product__value">500 Р.</td>
               </tr>
             </table>
             <button class="product__button button" type="button">Заказать</button>
