--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,9 +34,9 @@
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list">
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" alt="Кэт энерджи с курицей 500г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" alt="Кэт энерджи с курицей 500г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy pro 500 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy pro 500 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">500 г</td>
@@ -53,9 +53,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" alt="Кэт энерджи с курицей 1000г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy pro 1000 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">1000 г</td>
@@ -72,9 +72,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" alt="Кэт энерджи с рыбой 500г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy pro 500 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy pro 500 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">500 г</td>
@@ -91,9 +91,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" alt="Кэт энерджи с рыбой 1000г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy pro 1000 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">1000 г</td>
@@ -110,9 +110,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" alt="Кэт энерджи с гречькой 500г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy slim 500 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">500 г</td>
@@ -129,9 +129,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" alt="Кэт энерджи с гречькой 1000г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy slim 1000 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy slim 1000 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">1000 г</td>
@@ -148,9 +148,9 @@
             <button class="product__button button" type="button">Заказать</button>
           </li>
           <li class="catalog__item product">
-            <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г">
+            <a class="product__link" href="#"><img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" alt="Кэт энерджи с рисом 500г"></a>
             <table class="product__composition">
-              <th class="product__title">Cat energy slim 500 г</th>
+              <th class="product__title"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
               <tr class="product__item">
                 <td class="product__index">Обьем</td>
                 <td class="product__value">500 г.</td>
