--- a/source/index.html
+++ b/source/index.html
@@ -72,6 +72,40 @@
           </ul>
       </section>
 
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__description">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <ul class="example__list">
+          <li class="example__item">
+            <b class="example__value">5 кг</b>
+            <p class="example__index">снижение веса</p>
+          </li>
+          <li class="example__item">
+            <b class="example__value">60 дней</b>
+            <p class="example__index">затрачено времени</p>
+          </li>
+        </ul>
+        <h3 class="example__subtitle">Затраты на питание: 15 000 руб</h3>
+        <img class="example__image example__image--active" width="320" height="240" src="img/before-mobile@1x.png" alt="Борис до диеты">
+        <img class="example__image" width="320" height="240" src="img/after-mobile@1x.png" alt="Борис после диеты">
+        <div class="example__wrapper">
+          <p class="example__before-after">Было</p>
+          <span class="example__toggle"></span>
+          <p class="example__before-after">Стало</p>
+        </div>
+      </section>
+
+      <section class="adress">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="adress__map adress__map--pin">
+          <img class="adress__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </p>
+      </section>
+
     </main>
 
     <footer class="page-footer">
