Добавлна кнопка Показать все с заголовком

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -164,8 +164,13 @@
                 <td class="product__value">500 Р.</td>
               </tr>
             </table>
-            <a class="product__button butto" href="#">Заказать</a></li>
+            <a class="product__button button" href="#">Заказать</a></li>
         </ul>
+        <div class="catalog__more catalog__more--plus">
+          <b class="catalog__more-title">Показать еще 100500 товаров</b>
+          <p class="catalog__more-subtitle">На самом деле вкусов гораздо больше!</p>
+          <a class="catalog__button button" href="#">Показать все</a>
+        </div>
       </section>
     </main>
 
