Перенос сексции адреса в футер для всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -97,32 +97,30 @@
         </div>
       </section>
 
-      <section class="adress">
-        <h2 class="visually-hidden">Наш адрес</h2>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__adress adress">
         <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
         <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <p class="adress__map adress__map--pin">
           <img class="adress__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         </p>
-      </section>
-
-    </main>
-
-    <footer class="page-footer">
+      </div>
       <a class="page-footer__logo" href="#">
         <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
       </a>
-        <ul class="page-footer__social social-list">
-          <li class="social-list__item">
-            <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
-          </li>
-          <li class="social-list__item">
-            <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
-          </li>
-          <li class="social-list__item">
-            <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
-          </li>
-        </ul>
+      <ul class="page-footer__social social-list">
+        <li class="social-list__item">
+          <a href="#" class="social__link social__link--vkontakte">Мы Вконтакте</a>
+        </li>
+        <li class="social-list__item">
+          <a href="#" class="social__link social__link--instagram">Мы в Инстаграме</a>
+        </li>
+        <li class="social-list__item">
+          <a href="#" class="social__link social__link--facebook">Мы в Фейсбуке</a>
+        </li>
+      </ul>
       <div class="page-footer__copyright copyright">
         <a class="copyright__link" href="#">HTML Academy</a>
       </div>
