--- a/source/form.html
+++ b/source/form.html
@@ -29,6 +29,13 @@
     </header>
 
     <footer class="page-footer">
+      <div class="page-footer__adress adress">
+        <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="adress__map adress__map--pin">
+          <img class="adress__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </p>
+      </div>
       <a class="page-footer__logo" href="index.html">
         <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
       </a>
