--- a/source/index.html
+++ b/source/index.html
@@ -100,11 +100,11 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__adress adress">
-        <b class="adress__title">Приглашаем к сотрудничеству дилеров!</b>
-        <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <p class="adress__map adress__map--pin">
-          <img class="adress__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <div class="page-footer__address address">
+        <b class="address__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="address__map address__map--pin">
+          <img class="address__map-image" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         </p>
       </div>
       <a class="page-footer__logo" href="#">
