Инпут отправки формы изменен на кнопку

--- a/source/form.html
+++ b/source/form.html
@@ -119,7 +119,7 @@
           </label>
         </p>
 
-        <input class="form__submit button" type="submit" name="submit-form" value="Отправить заявку">
+        <button class="form__submit button" type="submit">Отправить заявку</button>
 
         <i class="form__explanation">* — Обязательные поля</i>
 
