К чекбоксам и радио добавлен checked

--- a/source/form.html
+++ b/source/form.html
@@ -60,7 +60,7 @@
             <h3 class="visually-hidden title">Тип программы</h3>
             <p class="form__item">
               <label class="form__label form__label--radio">
-                <input class="form__radio" type="radio"  name="program-type">
+                <input class="form__radio" type="radio"  name="program-type" checked>
                 Похудение
               </label>
             </p>
@@ -105,7 +105,7 @@
             <h3 class="form__subtitle title title--size-m title--black">Дополнительно</h3>
             <p class="form__item">
               <label class="form__label">
-                <input class="form__checkbox" type="checkbox"  name="additional">
+                <input class="form__checkbox" type="checkbox"  name="additional" checked>
                 Сахарозаменитель
               </label>
             </p>
@@ -128,11 +128,8 @@
               </label>
             </p>
           </fieldset>
-
           <button class="form__submit button button--green" type="submit">Отправить заявку</button>
-
           <i class="form__explanation">* — Обязательные поля</i>
-
         </form>
       </div>
     </main>
