Исправлены небольшие недочеты

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,7 +31,7 @@
       <div class="page-main__container">
         <h1 class="title title--size-l title--black">Каталог продукции</h1>
         <section class="catalog page-main__catalog">
-          <h2 class="visually-hidden title">Наши товары</h2>
+          <h2 class="visually-hidden">Наши товары</h2>
           <ul class="catalog__list">
             <li class="catalog__item product">
               <div class="product__wrapper">
