--- a/source/index.html
+++ b/source/index.html
@@ -13,17 +13,17 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--active">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--active">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -34,7 +34,7 @@
       <section class="product-banner page-main__product-banner">
         <div class="product-banner__overlay"></div>
         <div class="page-main__container">
-          <h2 class="visually-hidden title title--size-m title--white">Баннер продукта</h2>
+          <h2 class="visually-hidden">Баннер продукта</h2>
           <p class="product-banner__tagline">Занялся собой? Зайсмись и котом!</p>
           <img class="product-banner__image" width="280" height="271" src="img/index-can-mobile@1x.png" alt="Кэт энерджи с курицей">
           <a class="product-banner__button button button--green" href="form.html">Подобрать программу</a>
@@ -42,7 +42,7 @@
       </section>
 
       <section class="programs page-main__programs page-main__container">
-          <h2 class="visually-hidden title">Готовые программы питания</h2>
+          <h2 class="visually-hidden">Готовые программы питания</h2>
           <ul class="programs__list">
             <li class="programs__item">
               <h3 class="programs__title programs__title--cat-slim">Похудение</h3>
