Убрано сложное миксование, заменено на модификаторы

--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
         </div>
       </section>
 
-      <section class="programs page-main__programs page-main__container">
+      <section class="programs programs--mb page-main__container">
           <h2 class="visually-hidden">Готовые программы питания</h2>
           <ul class="programs__list">
             <li class="programs__item">
@@ -57,7 +57,7 @@
           </ul>
       </section>
 
-      <section class="advantage page-main__advantage page-main__container">
+      <section class="advantage advantage--mb page-main__container">
           <h2 class="advantage__title title title--size-l title--black">Как это работает</h2>
           <ul class="advantage__list">
             <li class="advantage__item advantage__item--leaf ">
